@@ -2,10 +2,9 @@ package com.arbit.app.auth.security;
 
 import com.arbit.app.user.entity.User;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.UUID;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 public record CustomUserDetails(User user) implements UserDetails {
@@ -16,7 +15,7 @@ public record CustomUserDetails(User user) implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+        return Collections.emptyList();
     }
 
     @Override
